--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom"
+    "test": "NODE_ENV=test react-app-rewired test --env=jsdom"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
